# imaging-llm-agent

./: .env.example   README.md  pyproject.toml
.github/workflows/: tests.yml
src/imaging_llm_agent/agent/: __init__.py  executor.py  llm_client.py  router.py  schema.py
src/imaging_llm_agent/api/: __init__.py  main.py
src/imaging_llm_agent/tools/: __init__.py  io.py  registration.py  registry.py  segmentation.py
tests/: test_agent.py  test_tools.py
ui/: app.py
