[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "imaging-llm-agent"
version = "0.1.0"
description = "LLM-based medical imaging inference engine for medical imaging tasks."
authors = ["Reza Kalantar <rekalantar@gmail.com>"]
packages = [{include = "imaging_llm_agent", from = "src"}]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = ">=0.110.0"
uvicorn = {version = ">=0.27.0", extras = ["standard"]}
pydantic = ">=2.6.0"
pydantic-settings = ">=2.2.0"
python-dotenv = ">=1.0.0"
openai = ">=1.50.0"
numpy = ">=1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
black = ">=23.12.0"
isort = ">=5.13.0"
ruff = ">=0.1.0"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "--cov=src/imaging_llm_agent --cov-report=html --cov-report=term-missing"